# DargonBallRadar

./: LICENSE  Part.xlsx  README.md
3d print/: 底座.stl  按键.stl  雷达上.stl  雷达下.stl
PCB/: ProPrj_龙珠雷达_2024-11-02.epro  Readme.txt
firmware/: Readme.txt
firmware/DragonBallRadar/: CMakeLists.txt  sdkconfig
firmware/DragonBallRadar/components/max98357/: CMakeLists.txt  esp_lcd_touch_gt911.c  idf_component.yml  max98357.c
firmware/DragonBallRadar/components/max98357/include/: i2s.h  max98357.h  sound_bip.h  sound_button.h
firmware/DragonBallRadar/main/: CMakeLists.txt  ball.c  idf_component.yml  main.c  test2.c
